--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
   },
   "devDependencies": {
     "nwb": "0.24.x",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-intl": "^3.11.0",
+    "react-router-dom": "^5.1.2",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.5.1",
+    "react-redux": "^7.1.3",
+    "react-request-fullscreen": "^1.1.2"
   },
   "author": "",
   "homepage": "",
