--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "redux": "^4.0.5"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
   "devDependencies": {
-    "nwb": "0.24.x",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.5.1",
+    "@reduxjs/toolkit": "^1.3.6",
+    "nwb": "^0.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^3.11.0",
-    "react-router-dom": "^5.1.2",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.5.1",
-    "react-redux": "^7.1.3",
-    "react-request-fullscreen": "^1.1.2"
+    "react-redux": "^7.2.0",
+    "react-request-fullscreen": "^1.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "author": "",
   "homepage": "",
