--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "redux": "^4.0.5"
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.5.1",
+    "react-request-fullscreen": "^1.1.2"
   },
   "peerDependencies": {
     "react": "16.x"
