--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.5.1",
-    "react-request-fullscreen": "^1.1.2"
+    "react-request-fullscreen": "^1.1.2",
+    "react-intl": "^3.11.0"
   },
   "peerDependencies": {
     "react": "16.x"
@@ -34,9 +35,7 @@
     "nwb": "^0.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-intl": "^3.11.0",
     "react-redux": "^7.2.0",
-    "react-request-fullscreen": "^1.1.2",
     "react-router-dom": "^5.1.2"
   },
   "publishConfig": {
