--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "react": "16.x"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "bufferutil": "^4.0.1",
     "inferno": "^7.4.2",
     "nwb": "^0.25.x",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-svg-loader": "^3.0.3",
     "type-fest": "^0.13.1",
     "utf-8-validate": "^5.0.2",
     "webpack-plugin-serve": "^1.0.1"
