--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "@material-ui/core": "latest",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.5.1",
     "react-intl": "^3.11.0",
     "react-request-fullscreen": "^1.1.2",
-    "prop-types": "latest"
+    "prop-types": "15.7.2"
   },
   "peerDependencies": {
-    "react": "^16.x",
-    "react-dom": "^16.x"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
@@ -40,9 +40,6 @@
   },
   "author": "",
   "homepage": "",
-  "license": "MIT",
+  "license": "MPL",
   "repository": "git://github.com/gridsuite/commons-ui.git",
-  "keywords": [
-    "react-component"
-  ]
 }
