--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "author": "",
   "homepage": "",
   "license": "MPL",
-  "repository": "git://github.com/gridsuite/commons-ui.git",
+  "repository": "git://github.com/gridsuite/commons-ui.git"
 }
