fix module not found issues
Signed-off-by: chamseddine <chamseddine.benhamed@ensi-uma.tn>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "@svgr/webpack": "^5.4.0",
     "bufferutil": "^4.0.1",
     "inferno": "^7.4.2",
