--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,10 @@ on: [push]
 jobs:
     build:
         runs-on: ubuntu-latest
-        strategy:
-          matrix:
-            version: [16, 15, 0]
         steps:
             - uses: actions/setup-node@v3
               with:
-                node-version: ${{ matrix.version }}
+                node-version: 16.15.0
             - name: Checkout sources
               uses: actions/checkout@v2
               with:
