--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/setup-node@v3
+              with:
+                node-version: 14
             - name: Checkout sources
               uses: actions/checkout@v2
               with:
@@ -19,7 +22,7 @@ jobs:
                   npm install
                   npm run test
                   npx eslint --max-warnings=0 "**/*.js"
-                  npm run build
+                  npm run buildCI
 
             - name: Broadcast update event
               if: github.ref == 'refs/heads/main'
