fix: restore build step
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
                   npm install
                   npm run test
                   npx eslint --max-warnings=0 "**/*.js"
-                  npm run buildCI
+                  npm run build
 
             - name: Broadcast update event
               if: github.ref == 'refs/heads/main'
