--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "start": "npm install;nwb serve-react-demo",
         "test": "nwb test-react",
         "test:coverage": "nwb test-react --coverage",
-        "test:watch": "nwb test-react --server"
+        "test:watch": "nwb test-react --server",
+        "test:jest": "jest"
     },
     "dependencies": {
         "autosuggest-highlight": "^3.2.0",
@@ -67,6 +68,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.21.0",
         "eslint-plugin-react-hooks": "^4.1.2",
+        "jest": "^29.2.2",
         "notistack": "^2.0.3",
         "nwb": "^0.25.x",
         "prettier": "^2.0.0",
