--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "prop-types": "^15.7.2",
         "react-csv-downloader": "^2.7.0",
         "react-request-fullscreen": "^1.1.2",
-        "react-virtualized": "^9.21.2"
+        "react-virtualized": "^9.21.2",
+        "@react-hook/window-size": "^3.1.1",
+        "react-resizable": "^3.0.4"
     },
     "peerDependencies": {
         "@emotion/react": "^11.8.1",
