--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
         "react-router-dom": "^6.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-intl": "^6.0.0"
+        "react-intl": "^6.0.0",
+        "react-hook-form": "^7.41.0",
+        "yup": "^1.0.0",
+        "@hookform/resolvers": "^3.0.0"
     },
     "devDependencies": {
         "@emotion/react": "^11.8.1",
@@ -74,6 +77,9 @@
         "react-dom": "^18.0.0",
         "react-intl": "^6.0.0",
         "react-router-dom": "^6.0.0",
+        "react-hook-form": "^7.41.0",
+        "yup": "^1.0.0",
+        "@hookform/resolvers": "^3.0.0",
         "type-fest": "^2.0.0",
         "utf-8-validate": "^5.0.2",
         "webpack-plugin-serve": "^1.0.1",
