--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "npm": "<=6",
         "node": ">=12 <=14"
     },
-    "main": "es/index.js",
+    "module": "es/index.js",
     "files": [
         "css",
         "es",
