--- a/package.json
+++ b/package.json
@@ -100,6 +100,6 @@
     },
     "author": "gridsuite team",
     "homepage": "https://github.com/gridsuite",
-    "license": "MPL-2.0",
+    "license": "MPL",
     "repository": "git://github.com/gridsuite/commons-ui.git"
 }
