--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,23 @@
 {
+    // Inspired by TSConfig base for Vite React and what is recommended for bundler and library
+    // https://www.typescriptlang.org/docs/handbook/tsconfig-json.html#tsconfig-bases
+    // https://www.npmjs.com/package/@tsconfig/vite-react
+    // https://www.typescriptlang.org/docs/handbook/modules/guides/choosing-compiler-options.html
     "compilerOptions": {
         "module": "esnext",
+        "moduleResolution": "bundler",
         "target": "es6",
+        "lib": ["dom", "dom.iterable", "esnext"],
+//        "allowJs": true, // it works without and if activated, tsc read the node_modules...
         "declaration": true,
-        "outDir": "./dist",
         "strict": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "allowSyntheticDefaultImports": true,
         "noFallthroughCasesInSwitch": true,
-        "moduleResolution": "node"
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx"
     },
-    "include": ["src"]
+    "include": ["src", "demo"]
 }
