--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.23.8",
         "@babel/preset-react": "^7.23.3",
+        "@babel/preset-typescript": "^7.23.3",
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.5.0",
@@ -100,6 +101,7 @@
     "eslintConfig": {
         "extends": [
             "react-app",
+            "react-app/jest",
             "plugin:prettier/recommended"
         ],
         "ignorePatterns": [
