Update build script in package.json to include additional '&&' operator for clarity and consistency.
Signed-off-by: Florent MILLOT <millotflo@gmail.com>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     ],
     "scripts": {
         "start": "vite demo/ --config vite.config.mts",
-        "build": "npm install; tsc --p ./tsconfig-build.json && vite build; npm prune --production",
+        "build": "npm install && tsc --p ./tsconfig-build.json && vite build && npm prune --production",
         "build:only": "tsc --p ./tsconfig-build.json && vite build",
         "prepublishOnly": "npm run build",
         "test": "jest",
