--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     ],
     "scripts": {
         "start": "vite demo/ --config vite.config.mts",
-        "build": "npm install && tsc --p ./tsconfig-build.json && vite build && npm prune --production",
-        "build:only": "tsc --p ./tsconfig-build.json && vite build",
+        "build": "npm install && vite build && npm prune --production",
+        "build:only": "vite build",
         "prepublishOnly": "npm run build",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
-        "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx"
+        "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0"
     },
     "dependencies": {
         "autosuggest-highlight": "^3.2.0",
