--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["src", "demo"] // we can let demo because the file generation is managed my vite
+    "include": ["src", "demo"] // we can let demo because the file generation is managed my vite and we have noEmit anyway
 }
