--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
         "@mui/styles": "^5.5.0",
         "@hookform/resolvers": "^3.0.0",
         "@babel/helper-builder-react-jsx": "7.15.4",
+        "@types/react": "^18.2.56",
+        "@types/react-dom": "^18.2.19",
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "@typescript-eslint/parser": "5.62.0",
         "@vitejs/plugin-react": "^4.2.1",
