--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
               run: |
                   npm install
                   npm run test
-                  npx eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0
+                  npm run lint
                   npm run build
 
             - name: Broadcast update event
