--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     ],
     "scripts": {
         "start": "vite demo/ --config vite.config.mts",
-        "build": "npm install && tsc && vite build && npm prune --production",
-        "build:only": "vite build",
+        "start:open": "vite demo/ --config vite.config.mts --open",
+        "build": "tsc && vite build",
         "prepublishOnly": "npm run build",
         "test": "jest",
         "test:coverage": "jest --coverage",
