Move explore componants to commons
Signed-off-by: Lilian Houdelet <lhoudelet@oxyl.fr>

--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
         "@mui/lab": "^5.0.0-alpha.72",
         "@mui/material": "^5.5.0",
         "@mui/styles": "^5.5.0",
+        "@react-querybuilder/dnd": "^6.5.4",
+        "@react-querybuilder/material": "^6.5.1",
         "@hookform/resolvers": "^3.0.0",
         "@babel/helper-builder-react-jsx": "7.15.4",
         "@types/react": "^18.2.56",
@@ -67,6 +69,9 @@
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "@typescript-eslint/parser": "5.62.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "@types/uuid": "^9.0.6",
+        "ag-grid-community": "^29.0.0",
+        "ag-grid-react": "^29.0.0",
         "babel-eslint": "^10.1.0",
         "bufferutil": "^4.0.1",
         "eslint": "^7.9.0",
@@ -88,6 +93,10 @@
         "react-intl": "^6.0.0",
         "react-hook-form": "^7.41.0",
         "react-router-dom": "^6.0.0",
+        "react-querybuilder": "^6.5.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-papaparse": "^4.1.0",
         "ts-node": "^10.9.2",
         "type-fest": "^2.0.0",
         "typescript": "5.1.6",
@@ -99,6 +108,7 @@
         "vite-plugin-externalize-deps": "^0.8.0",
         "vite-plugin-svgr": "^4.2.0",
         "vite-plugin-dts": "^2.3.0",
+        "uuid": "^9.0.1",
         "yup": "^1.0.0"
     },
     "eslintConfig": {
