--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "start": "vite demo/ --config vite.config.mts",
         "start:open": "vite demo/ --config vite.config.mts --open",
         "build": "tsc && vite build",
+        "build:prune": "npm install && tsc && vite build && npm prune --production",
         "prepublishOnly": "npm run build",
         "test": "jest",
         "test:coverage": "jest --coverage",
