--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "react-csv-downloader": "^2.7.0",
         "react-request-fullscreen": "^1.1.2",
         "react-virtualized": "^9.22.5",
-        "uuid": "^3.4.0"
+        "uuid": "^9.0.1"
     },
     "peerDependencies": {
         "@emotion/react": "^11.8.1",
@@ -83,6 +83,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.21.0",
         "eslint-plugin-react-hooks": "^4.1.2",
+        "glob": "^10.3.10",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-svg-transformer": "^1.0.0",
@@ -108,7 +109,7 @@
         "vite-plugin-externalize-deps": "^0.8.0",
         "vite-plugin-svgr": "^4.2.0",
         "vite-plugin-dts": "^2.3.0",
-        "uuid": "^9.0.1",
+        "vite-plugin-lib-inject-css": "^2.0.0",
         "yup": "^1.0.0"
     },
     "eslintConfig": {
