--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "yup": "^1.0.0"
     },
     "devDependencies": {
-        "@babel/helper-builder-react-jsx": "7.15.4",
+        "@babel/helper-builder-react-jsx": "^7.22.10",
         "@babel/preset-env": "^7.24.3",
         "@babel/preset-react": "^7.24.1",
         "@babel/preset-typescript": "^7.24.1",
