--- a/package.json
+++ b/package.json
@@ -96,10 +96,10 @@
         "react-router-dom": "^6.22.3",
         "ts-node": "^10.9.2",
         "type-fest": "^4.14.0",
-        "typescript": "5.1.6",
+        "typescript": "^5.4.3",
         "utf-8-validate": "^6.0.3",
         "vite": "^5.2.6",
-        "vite-plugin-dts": "^2.3.0",
+        "vite-plugin-dts": "^3.7.3",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-lib-inject-css": "^2.0.1",
         "vite-plugin-svgr": "^4.2.0",
