--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
         "@react-hook/window-size": "^3.1.1",
         "@types/react": "^18.2.70",
         "@types/react-dom": "^18.2.22",
-        "@typescript-eslint/eslint-plugin": "^7.3.1",
-        "@typescript-eslint/parser": "^7.3.1",
+        "@typescript-eslint/eslint-plugin": "5.62.0",
+        "@typescript-eslint/parser": "5.62.0",
         "@vitejs/plugin-react": "^4.2.1",
         "babel-eslint": "^10.1.0",
         "bufferutil": "^4.0.8",
@@ -99,7 +99,7 @@
         "typescript": "^5.4.3",
         "utf-8-validate": "^6.0.3",
         "vite": "^5.2.6",
-        "vite-plugin-dts": "^3.7.3",
+        "vite-plugin-dts": "2.3.0",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-lib-inject-css": "^2.0.1",
         "vite-plugin-svgr": "^4.2.0",
