--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
         "@emotion/styled": "^11.11.0",
         "@hookform/resolvers": "^3.3.4",
         "@mui/icons-material": "^5.15.14",
-        "@mui/lab": "^5.0.0-alpha.72",
+        "@mui/lab": "^5.0.0-alpha.75",
+        "@mui/x-tree-view": "^6.17.0",
         "@mui/material": "^5.15.14",
         "@mui/styles": "^5.15.14",
         "@react-hook/window-size": "^3.1.1",
