--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
     licenses:
-        name: Check licenses
+        name: Check licenses headers and dependencies
         runs-on: ubuntu-latest
 
         steps:
