--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "@mui/styles": "^5.15.14",
         "@mui/x-tree-view": "^6.17.0",
         "@react-hook/window-size": "^3.1.1",
-        "@types/react": "^18.2.71",
+        "@types/react": "^18.2.73",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
         "@typescript-eslint/parser": "^7.4.0",
@@ -91,8 +91,8 @@
         "prettier": "^3.2.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.51.1",
-        "react-intl": "^6.6.3",
+        "react-hook-form": "^7.51.2",
+        "react-intl": "^6.6.4",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^6.22.3",
         "ts-node": "^10.9.2",
@@ -100,7 +100,7 @@
         "typescript": "^5.4.3",
         "utf-8-validate": "^6.0.3",
         "vite": "^5.2.6",
-        "vite-plugin-dts": "3.3.0",
+        "vite-plugin-dts": "^3.8.1",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-lib-inject-css": "^2.0.1",
         "vite-plugin-svgr": "^4.2.0",
