try: move config file in .github/workflow
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
 
           - name: Check License Header (Check Mode)
             uses: apache/skywalking-eyes/header@v0.5.0
+            with:
+              config: .github/workflows/.licenserc.yaml
 
     build:
         runs-on: ubuntu-latest
