Move licenserc.yaml into config folder
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           - name: Check License Header (Check Mode)
             uses: apache/skywalking-eyes/header@v0.5.0
             with:
-              config: .github/workflows/.licenserc.yaml
+              config: .github/config/.licenserc.yaml
 
     build:
         runs-on: ubuntu-latest
