--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     },
     "devDependencies": {
         "@babel/helper-builder-react-jsx": "^7.22.10",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@babel/preset-env": "^7.24.3",
         "@babel/preset-react": "^7.24.1",
         "@babel/preset-typescript": "^7.24.1",
