--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
         "react-router-dom": "^6.22.3",
         "ts-node": "^10.9.2",
         "type-fest": "^4.14.0",
-        "typescript": "^5.4.3",
+        "typescript": "5.1.6",
         "utf-8-validate": "^6.0.3",
         "vite": "^5.2.6",
         "vite-plugin-dts": "^3.8.1",
