--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "react-csv-downloader": "^3.1.0",
         "react-request-fullscreen": "^1.1.2",
         "react-virtualized": "^9.22.5",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "localized-countries": "^2.0.0"
     },
     "peerDependencies": {
         "@emotion/react": "^11.11.4",
