--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "build": "tsc && vite build",
         "build:prune": "npm install && tsc && vite build && npm prune --production",
         "prepublishOnly": "npm run build",
-        "test": "jest",
+        "test": "jest --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
         "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
         "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0",
@@ -91,6 +91,7 @@
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "glob": "^10.3.12",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-svg-transformer": "^1.0.0",
