--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "build": "tsc && vite build",
         "build:prune": "npm install && tsc && vite build && npm prune --production",
         "prepublishOnly": "npm run build",
-        "test": "jest --transformIgnorePatterns \"node_modules/(?!react-dnd)/\"",
+        "test": "jest",
         "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
         "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0",
