--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
         "react-request-fullscreen": "^1.1.2",
         "react-virtualized": "^9.22.5",
         "uuid": "^9.0.1",
-        "localized-countries": "^2.0.0"
+        "localized-countries": "^2.0.0",
+        "react-querybuilder": "^6.5.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "@react-querybuilder/material": "^6.5.5",
+        "@react-querybuilder/dnd": "^6.5.5"
     },
     "peerDependencies": {
         "@emotion/react": "^11.11.4",
@@ -70,7 +75,6 @@
         "@mui/x-tree-view": "^6.17.0",
         "@react-hook/window-size": "^3.1.1",
         "@react-querybuilder/dnd": "^6.5.5",
-        "@react-querybuilder/material": "^6.5.5",
         "@types/autosuggest-highlight": "^3.2.3",
         "@types/eslint": "^8.56.7",
         "@types/eslint-config-prettier": "^6.11.3",
@@ -113,9 +117,6 @@
         "react-intl": "^6.6.4",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^6.22.3",
-        "react-querybuilder": "^6.5.1",
-        "react-dnd": "^16.0.1",
-        "react-dnd-html5-backend": "^16.0.1",
         "react-papaparse": "^4.1.0",
         "ts-node": "^10.9.2",
         "type-fest": "^4.14.0",
