--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
         "licenses-check": "license-checker --summary --excludePrivatePackages --production --onlyAllow \"$( jq -r .onlyAllow[] license-checker-config.json | tr '\n' ';')\" --excludePackages \"$( jq -r .excludePackages[] license-checker-config.json | tr '\n' ';')\""
     },
     "dependencies": {
+        "@react-querybuilder/material": "^6.5.5",
+        "@react-querybuilder/dnd": "^6.5.5",
         "autosuggest-highlight": "^3.3.4",
         "clsx": "^2.1.0",
         "jwt-decode": "^4.0.0",
+        "localized-countries": "^2.0.0",
         "memoize-one": "^6.0.0",
         "oidc-client": "^1.11.5",
         "prop-types": "^15.8.1",
@@ -38,12 +41,9 @@
         "react-request-fullscreen": "^1.1.2",
         "react-virtualized": "^9.22.5",
         "uuid": "^9.0.1",
-        "localized-countries": "^2.0.0",
-        "react-querybuilder": "^6.5.1",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
-        "@react-querybuilder/material": "^6.5.5",
-        "@react-querybuilder/dnd": "^6.5.5"
+        "react-querybuilder": "^6.5.1"
     },
     "peerDependencies": {
         "@emotion/react": "^11.11.4",
@@ -74,7 +74,6 @@
         "@mui/material": "^5.15.14",
         "@mui/x-tree-view": "^6.17.0",
         "@react-hook/window-size": "^3.1.1",
-        "@react-querybuilder/dnd": "^6.5.5",
         "@types/autosuggest-highlight": "^3.2.3",
         "@types/eslint": "^8.56.7",
         "@types/eslint-config-prettier": "^6.11.3",
