--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "ag-grid-community": "^31.0.0",
+        "ag-grid-react": "^31.2.0",
         "babel-eslint": "^10.1.0",
         "bufferutil": "^4.0.8",
         "eslint": "^8.57.0",
