--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.2",
         "react-intl": "^6.6.4",
+        "react-papaparse": "^4.1.0",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^6.22.3",
         "ts-node": "^10.9.2",
