--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "npm": ">=9",
         "node": ">=18"
     },
+    "type": "module",
     "exports": "./dist/index.js",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -35,7 +36,6 @@
         "oidc-client": "^1.11.5",
         "prop-types": "^15.8.1",
         "react-csv-downloader": "^3.1.0",
-        "react-request-fullscreen": "^1.1.2",
         "react-virtualized": "^9.22.5",
         "uuid": "^9.0.1"
     },
