--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "@mui/icons-material": "^5.15.14",
         "@mui/lab": "5.0.0-alpha.169",
         "@mui/material": "^5.15.14",
+        "ag-grid-community": "^31.0.0",
+        "ag-grid-react": "^31.2.0",
         "notistack": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -83,6 +85,8 @@
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "ag-grid-community": "^31.0.0",
+        "ag-grid-react": "^31.2.0",
         "babel-eslint": "^10.1.0",
         "bufferutil": "^4.0.8",
         "eslint": "^8.57.0",
