--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
         "react-hook-form": "^7.51.2",
         "react-intl": "^6.6.4",
         "react-papaparse": "^4.1.0",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.22.3",
+        "redux": "^5.0.1",
         "yup": "^1.4.0"
     },
     "devDependencies": {
@@ -117,8 +119,10 @@
         "react-hook-form": "^7.51.2",
         "react-intl": "^6.6.4",
         "react-papaparse": "^4.1.0",
+        "react-redux": "^9.1.2",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^6.22.3",
+        "redux": "^5.0.1",
         "ts-node": "^10.9.2",
         "type-fest": "^4.14.0",
         "typescript": "5.1.6",
